# intelligent-document-ai-app

./: .dockerignore  Dockerfile  main.py  pyproject.toml
config/: settings.py
db/: mongodb.py
helper/: __init__.py
models/: invoice_model.py
prompts/: invoice_prompts.py
router/: home_router.py  invoice_router.py
services/: extraction_service.py  file_handler.py  invoice_pipeline.py  storage_service.py  vision_service.py
static/temp/: read.md
